<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/base_form">

    <include layout="@layout/form_head" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--个人资料-->

        <LinearLayout style="@style/base_form">


            <LinearLayout
                android:id="@+id/ll_menu_1"
                style="@style/my_info_item">

                <TextView
                    style="@style/my_info_title"
                    android:layout_weight="1"
                    android:text="@string/myinfo_title1" />

                <ImageView
                    android:id="@+id/img_head"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginEnd="@dimen/dp13"
                    android:src="@mipmap/icon_head" />

                <ImageView style="@style/item_right" />

            </LinearLayout>

            <View style="@style/view_line" />

            <!--姓名-->
            <LinearLayout style="@style/my_info_item">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title2" />

                <EditText
                    android:id="@+id/et_nickName"
                    style="@style/my_info_edit" />

            </LinearLayout>

            <View style="@style/view_line" />

            <!--身份证号-->
            <LinearLayout
                style="@style/my_info_item"
                android:visibility="gone">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title3" />

                <EditText
                    android:id="@+id/et_cardNo"
                    style="@style/my_info_edit" />

            </LinearLayout>

            <View style="@style/view_line" />

            <LinearLayout
                style="@style/my_info_item"
                android:visibility="gone">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title4" />

                <TextView
                    style="@style/my_info_edit1"
                    android:hint="立即绑定" />

                <ImageView style="@style/item_right" />

            </LinearLayout>

            <View style="@style/view_line" />

            <LinearLayout
                style="@style/my_info_item"
                android:visibility="gone">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title5" />

                <TextView
                    style="@style/my_info_edit1"
                    android:hint="立即绑定" />

                <ImageView style="@style/item_right" />

            </LinearLayout>

            <View style="@style/view_line" />

            <!--营业执照-->
            <LinearLayout style="@style/my_info_item">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title6" />

                <EditText
                    android:id="@+id/et_license"
                    style="@style/my_info_edit" />

            </LinearLayout>

            <View style="@style/view_line" />

            <LinearLayout
                android:id="@+id/ll_menu_7"
                style="@style/my_info_item">

                <TextView
                    style="@style/my_info_title"
                    android:layout_weight="1"
                    android:text="@string/myinfo_title7" />


                <ImageView style="@style/item_right" />

            </LinearLayout>

            <View style="@style/view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp13"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_id_card_front"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp100"
                        android:layout_marginEnd="@dimen/dp20"
                        android:layout_marginStart="@dimen/dp20"
                        android:layout_marginTop="@dimen/dp10"
                        android:src="@mipmap/icon_id_card_front" />

                    <Button
                        android:id="@+id/btn_id_card_front"
                        android:layout_width="@dimen/dp100"
                        android:layout_height="@dimen/dp40"
                        android:layout_marginBottom="@dimen/dp10"
                        android:layout_marginTop="@dimen/dp10"
                        android:background="@color/btn_normal"
                        android:text="点击上传"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp18" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp13"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_id_card_back"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp100"
                        android:layout_marginEnd="@dimen/dp20"
                        android:layout_marginStart="@dimen/dp20"
                        android:layout_marginTop="@dimen/dp10"
                        android:src="@mipmap/icon_id_card_back" />

                    <Button
                        android:id="@+id/btn_id_card_back"
                        android:layout_width="@dimen/dp100"
                        android:layout_height="@dimen/dp40"
                        android:layout_marginBottom="@dimen/dp10"
                        android:layout_marginTop="@dimen/dp10"
                        android:background="@color/btn_normal"
                        android:text="点击上传"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp18" />

                </LinearLayout>

            </LinearLayout>

            <View style="@style/view_line" />

            <!--手机号码-->
            <LinearLayout style="@style/my_info_item">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title8" />

                <EditText
                    android:id="@+id/et_mobile"
                    style="@style/my_info_edit" />

            </LinearLayout>

            <View style="@style/view_line" />

            <!--地址-->
            <LinearLayout style="@style/my_info_item">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title9" />

                <EditText
                    android:id="@+id/et_address"
                    style="@style/my_info_edit" />

            </LinearLayout>

            <View style="@style/view_line" />

            <!--营业执照-->
            <LinearLayout
                android:id="@+id/ll_menu_9"
                style="@style/my_info_item"
                android:layout_marginTop="@dimen/dp20">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title10" />

                <TextView
                    android:id="@+id/tv_business_title"
                    style="@style/my_info_edit1"
                    android:text="请选择" />

                <ImageView style="@style/item_right" />

            </LinearLayout>

            <View style="@style/view_line" />

            <!--商家介绍-->
            <LinearLayout
                android:id="@+id/ll_menu_10"
                style="@style/my_info_item"
                android:layout_marginTop="@dimen/dp20">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title11" />


            </LinearLayout>

            <View style="@style/view_line" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp200"
                android:background="@color/white"
                android:gravity="top"
                android:lineSpacingMultiplier="1.2"
                android:maxLength="200"
                android:maxLines="5"
                android:padding="@dimen/dp13"
                android:textColor="@color/text_edit"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/sp20" />

            <View style="@style/view_line" />

            <!--修改密码-->
            <LinearLayout
                android:id="@+id/ll_menu_11"
                style="@style/my_info_item"
                android:layout_marginTop="@dimen/dp20">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title12" />

                <TextView
                    style="@style/my_info_edit1"
                    android:text="******" />

                <ImageView style="@style/item_right" />

            </LinearLayout>

            <View style="@style/view_line" />

            <!--修改密码-->
            <LinearLayout
                android:id="@+id/ll_menu_12"
                style="@style/my_info_item">

                <TextView
                    style="@style/my_info_title"
                    android:text="@string/myinfo_title13" />

                <TextView
                    android:id="@+id/tv_pay_pwd"
                    style="@style/my_info_edit1"
                    android:text="******" />

                <ImageView style="@style/item_right" />

            </LinearLayout>

            <View
                style="@style/view_line"
                android:layout_marginBottom="@dimen/dp50" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>